--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/partner/partnermain.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/partner/partnermain.xhtml
@@ -38,46 +38,57 @@
 								<b:commandLink title="Erster Datensatz" action="#{partnerBackingBean.commandFirst}">
 									<b:image source="/images/first.gif" />
 									<a4j:support event="onclick"
-										reRender="#{partnerBackingBean.data.changedComponents}" />
+										reRender="#{partnerBackingBean.data.changedComponents}" 
+										onsubmit="if (!checkForChangedData()) {return;}"
+										oncomplete="clearChanged()"/>
 								</b:commandLink>
 							</b:cell>
 							<b:cell x="2" y="1">
 								<b:commandLink title="Vorheriger Datensatz" action="#{partnerBackingBean.commandPrior}">
 									<b:image source="/images/prior.gif" />
 									<a4j:support event="onclick"
-										reRender="#{partnerBackingBean.data.changedComponents}" />
+										reRender="#{partnerBackingBean.data.changedComponents}" 
+										onsubmit="if (!checkForChangedData()) {return;}"
+										oncomplete="clearChanged()"/>
 								</b:commandLink>
 							</b:cell>
 							<b:cell x="3" y="1">
 								<b:commandLink title="Nächster Datensatz" action="#{partnerBackingBean.commandNext}">
 									<b:image source="/images/next.gif" />
 									<a4j:support event="onclick"
-										reRender="#{partnerBackingBean.data.changedComponents}" />
+										reRender="#{partnerBackingBean.data.changedComponents}" 
+										onsubmit="if (!checkForChangedData()) {return;}"
+										oncomplete="clearChanged()"/>
 								</b:commandLink>
 							</b:cell>
 							<b:cell x="4" y="1">
 								<b:commandLink title="Letzter Datensatz" action="#{partnerBackingBean.commandLast}">
 									<b:image source="/images/last.gif" />
 									<a4j:support event="onclick"
-										reRender="#{partnerBackingBean.data.changedComponents}" />
+										reRender="#{partnerBackingBean.data.changedComponents}"
+										onsubmit="if (!checkForChangedData()) {return;}"
+										oncomplete="clearChanged()"/>
 								</b:commandLink>
 							</b:cell>
 							<b:cell x="6" y="1">
 								<b:commandLink title="Neuer Datensatz" action="#{partnerBackingBean.commandNew}">
 									<b:image source="/images/new.gif" />
 									<a4j:support event="onclick"
-										reRender="#{partnerBackingBean.data.changedComponents}" />
+										reRender="#{partnerBackingBean.data.changedComponents}"
+										onsubmit="if (!checkForChangedData()) {return;}"
+										oncomplete="clearChanged()"/>
 								</b:commandLink>
 							</b:cell>
 							<b:cell x="7" y="1">
 								<b:commandLink title="Speichern" action="#{partnerBackingBean.commandSave}">
 									<b:image source="/images/update.gif" />
 									<a4j:support event="onclick"
-										reRender="#{partnerBackingBean.data.changedComponents}" />
+										reRender="#{partnerBackingBean.data.changedComponents}" 
+										oncomplete="clearChanged()"/>
 								</b:commandLink>
 							</b:cell>
 							<b:cell x="9" y="1">
-								<a4j:commandLink title="Löschen" action="#{partnerBackingBean.commandDelete}" onclick="if (!confirm('Wollen Sie diesen Datensatz wirklick löschen?')) {return false;}" reRender="#{partnerBackingBean.data.changedComponents}">
+								<a4j:commandLink title="Löschen" action="#{partnerBackingBean.commandDelete}" onclick="if (!confirm('Wollen Sie diesen Datensatz wirklick löschen?')) {return false;}" reRender="#{partnerBackingBean.data.changedComponents}" oncomplete="clearChanged()">
 									<b:image source="/images/delete.gif" />
 								</a4j:commandLink>
 							</b:cell>
@@ -85,14 +96,16 @@
 								<b:commandLink title="Suchen" action="#{partnerBackingBean.commandSearch}">
 									<b:image source="/images/search.gif" />
 									<a4j:support event="onclick"
-										reRender="#{partnerBackingBean.data.changedComponents}" />
+										reRender="#{partnerBackingBean.data.changedComponents}" 
+										oncomplete="clearChanged()"/>
 								</b:commandLink>
 							</b:cell>
 							<b:cell x="13" y="1">
 								<b:commandLink title="Neues Projekt erfassen" action="#{partnerBackingBean.commandNewProject}">
 									<b:image source="/images/newproject.gif" />
 									<a4j:support event="onclick"
-										reRender="#{partnerBackingBean.data.changedComponents}" />
+										reRender="#{partnerBackingBean.data.changedComponents}" 
+										oncomplete="clearChanged()"/>
 								</b:commandLink>
 							</b:cell>
 							<b:cell x="14" y="1" valign="middle" align="right">
@@ -105,14 +118,15 @@
 								<b:commandLink title="Springe zu Datensatz" action="#{partnerBackingBean.commandJumpToRecord}">
 									<b:image source="/images/search.gif" />
 									<a4j:support event="onclick"
-										reRender="#{partnerBackingBean.data.changedComponents}" />
+										reRender="#{partnerBackingBean.data.changedComponents}" 
+										oncomplete="clearChanged()"/>
 								</b:commandLink>
 							</b:cell>
 							<b:cell x="17" y="1">
 								<a4j:outputPanel ajaxRendered="true">
 									<b:commandLink rendered="#{!empty partnerBackingBean.data.originalFreelancer}" title="Zurück zum Freelancer" action="#{partnerBackingBean.commandJumpToFreelancer}" immediate="true">
 										<b:image source="/images/back.gif" />
-										<a4j:support event="onclick"/>
+										<a4j:support event="onclick" oncomplete="clearChanged()"/>
 									</b:commandLink>
 								</a4j:outputPanel>
 							</b:cell>
@@ -268,7 +282,8 @@
 												<b:commandLink title="Kontaktinformation löschen" action="#{partnerBackingBean.commandDeleteContact}">
 													<b:image source="/images/delete.gif" />
 													<a4j:support event="onclick"
-														reRender="kontakttable" />
+														reRender="kontakttable" 
+														oncomplete="markChanged()"/>
 												</b:commandLink>
 											</h:column>									
 										</b:table>
@@ -290,7 +305,8 @@
 										<b:commandLink title="Kontaktinformation hinzufügen" action="#{partnerBackingBean.commandAddContact}">
 											<b:image source="images/add.gif" />
 											<a4j:support event="onclick"
-											reRender="#{partnerBackingBean.data.changedComponents}" />
+											reRender="#{partnerBackingBean.data.changedComponents}" 
+											oncomplete="clearChanged()"/>
 										</b:commandLink>
 									</b:cell>
 
@@ -351,6 +367,11 @@
 		
 			</b:gridBagLayout>
 			
-		</f:subview>			
+		</f:subview>		
+		
+		<a4j:outputPanel ajaxRendered="true">
+			<rich:jQuery selector=":input" query="change(function() {markChanged();})"/>
+		</a4j:outputPanel>
+			
 	</ui:define>
 </ui:composition>	
