--- a/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/partner/partnermenu1.xhtml
+++ b/trunk/mogwai/MogwaiPowerstaff/src/main/webapp/include/partner/partnermenu1.xhtml
@@ -11,14 +11,16 @@
 		<b:cell x="1" y="3">
 			<b:commandLink action="#{partnerBackingBean.commandHistorie}" immediate="true" styleClass="menuitem">
 				<h:outputText value="Kontakthistorie" />
-				<a4j:support event="onclick"/>				
+				<a4j:support event="onclick"
+					onsubmit="if (!checkForChangedData()) {return;}"/>				
 			</b:commandLink>		
 		</b:cell>
 
 		<b:cell x="1" y="5">
 			<b:commandLink action="#{partnerBackingBean.commandFreiberufler}" immediate="true" styleClass="menuitem">
 				<h:outputText value="Freiberufler" />
-				<a4j:support event="onclick"/>				
+				<a4j:support event="onclick"
+					onsubmit="if (!checkForChangedData()) {return;}"/>				
 			</b:commandLink>		
 		</b:cell>
 		
